<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/PaddinLRContraint"
    android:paddingRight="@dimen/PaddinLRContraint"
    android:orientation="vertical"
    android:background="@color/backroundLogin">

    <TextView
        android:id="@+id/text_new_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_dimens_marginLR"
        android:layout_marginTop="@dimen/marginTopLogin"
        android:layout_marginEnd="@dimen/small_dimens_marginLR"
        android:fontFamily="monospace"
        android:text="PARA SUA SEGURANÇA, INFORME O CÓDIGO ENVIADO PARA O SEU
E-MAIL:"
        android:textAlignment="center"
        android:textColor="@color/titlecolor"
        android:textSize="@dimen/title_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/email_new_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_test"
        android:textSize="@dimen/email_size"
        android:textColor="@color/dark_orange"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_new_password" />

    <EditText
        android:id="@+id/token_new_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_height"
        android:layout_marginTop="40dp"
        android:background="@drawable/edittext_bottom_border"
        android:hint="@string/validation_token"
        android:textColor="@color/titlecolor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_new_password" />

    <TextView
        android:id="@+id/text_not_recive_new_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_dimens_marginLR"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="@dimen/small_dimens_marginLR"
        android:text="@string/code_not_recive"
        android:textColor="@color/titlecolor"
        app:layout_constraintEnd_toStartOf="@+id/text_link_new_password"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/token_new_password" />

    <TextView
        android:id="@+id/text_link_new_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="28dp"
        android:text="@string/send_again"
        android:textColor="@color/light_orange"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/token_new_password" />

    <TextView
        android:id="@+id/text2_new_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="monospace"
        android:text="@string/create_new_password"
        android:textAlignment="center"
        android:textSize="@dimen/title_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_not_recive_new_password" />

    <EditText
        android:id="@+id/new_password_edit_new_passaword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_height"
        android:layout_marginTop="8dp"
        android:background="@drawable/edittext_bottom_border"
        android:hint="@string/new_password_hint"
        android:textColor="@color/titlecolor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text2_new_password" />

    <EditText
        android:id="@+id/confirm_new_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_height"
        android:layout_marginTop="8dp"
        android:background="@drawable/edittext_bottom_border"
        android:hint="@string/confirm_new_password"
        android:textColor="@color/titlecolor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_password_edit_new_passaword" />

    <Button
        android:id="@+id/button_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="@dimen/button_bottom"
        android:background="@drawable/shape"
        android:backgroundTint="@color/light_blue"
        android:text="@string/change_password"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>