<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingLeft="@dimen/PaddinLRContraint"
    android:paddingRight="@dimen/PaddinLRContraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backroundLogin"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/text_reset_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="@dimen/marginTopLogin"
        android:layout_marginEnd="8dp"
        android:fontFamily="monospace"
        android:text="@string/confirm_info"
        android:textAlignment="center"
        android:textSize="@dimen/title_size"
        android:textColor="@color/titlecolor"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/email_reset_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="8dp"
        android:text="@string/email_test"
        android:textSize="@dimen/email_size"
        android:textColor="@color/titlecolor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_reset_password" />

    <EditText
        android:id="@+id/edit_user_reset_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_height"
        android:hint="@string/name_user"
        android:layout_marginEnd="@dimen/small_dimens_marginLR"
        android:layout_marginStart="@dimen/small_dimens_marginLR"
        android:layout_marginTop="96dp"
        android:background="@drawable/edittext_bottom_border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_reset_password" />

    <Button
        android:id="@+id/button_reset_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_dimens_marginLR"
        android:layout_marginEnd="@dimen/small_dimens_marginLR"
        android:layout_marginBottom="@dimen/button_bottom"
        android:background="@drawable/shape"
        android:backgroundTint="@color/light_blue"
        android:text="@string/advance"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>