<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/PaddinLRContraint"
    android:paddingRight="@dimen/PaddinLRContraint"
    android:orientation="vertical"
    android:background="@color/backroundLogin"
    android:id="@+id/login_layout">

    <TextView
        android:id="@+id/text_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTopLogin"
        android:fontFamily="monospace"
        android:gravity="center_horizontal"
        android:text="@string/text_login"
        android:textAlignment="center"
        android:textColor="@color/titlecolor"
        android:textSize="@dimen/title_size"

        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_text_login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_height"
        android:layout_marginStart="@dimen/small_dimens_marginLR"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="@dimen/small_dimens_marginLR"
        android:layout_marginBottom="8dp"
        android:background="@drawable/edittext_bottom_border"
        android:ellipsize="start"
        android:hint="@string/email_hint"
        app:layout_constraintBottom_toTopOf="@+id/button_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_login" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/button_bottom"
        android:background="@drawable/shape"
        android:backgroundTint="@color/light_blue"
        android:text="@string/advance"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="parent" />


</android.support.constraint.ConstraintLayout>