<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/PaddinLRContraint"
    android:paddingRight="@dimen/PaddinLRContraint"
    android:orientation="vertical"
    android:background="@color/backroundLogin"
    android:id="@+id/NewAccount">


    <TextView
        android:id="@+id/textNewAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_dimens_marginLR"
        android:layout_marginTop="@dimen/marginTopLogin"
        android:layout_marginEnd="@dimen/small_dimens_marginLR"
        android:fontFamily="monospace"
        android:text="@string/text_new_account"
        android:textAlignment="center"
        android:textSize="@dimen/title_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/emailNewAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_dimens_marginLR"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="@dimen/small_dimens_marginLR"
        android:text="@string/email_test"
        android:textColor="@color/titlecolor"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textNewAccount" />

    <!--<EditText
        android:id="@+id/nameNewAccount"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="92dp"
        android:background="@drawable/edittext_bottom_border"
        android:ems="10"
        android:hint="@string/complete_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.625"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailNewAccount" /> -->

    <com.example.android.movieapp.New_Account_Error
        android:id="@+id/nameNewAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailNewAccount"></com.example.android.movieapp.New_Account_Error>

    <!--<EditText
        android:id="@+id/userNewAccount"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/name_user"
        android:background="@drawable/edittext_bottom_border"
        android:inputType="textPersonName"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameNewAccount" />
        -->

    <com.example.android.movieapp.New_Account_Error
        android:id="@+id/userNewAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameNewAccount"></com.example.android.movieapp.New_Account_Error>

   <!-- <EditText
        android:id="@+id/passwordNewAccount"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_height"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:background="@drawable/edittext_bottom_border"
        android:inputType="textPersonName"
        android:hint="@string/password_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userNewAccount"app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userNewAccount"
        /> -->

    <com.example.android.movieapp.New_Account_Error
        android:id="@+id/passwordNewAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userNewAccount"></com.example.android.movieapp.New_Account_Error>



    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_dimens_marginLR"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="@dimen/small_dimens_marginLR"
        android:layout_marginBottom="16dp"
        android:background="@drawable/shape"
        android:backgroundTint="@color/light_blue"
        android:text="@string/advance"
        android:textColor="@color/white"
        android:onClick="buttonNewAccount"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordNewAccount"
        app:layout_constraintVertical_bias="1.0" />
</android.support.constraint.ConstraintLayout>